syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message AnomalyConnectionPayload {
  // Connection failure detail
  string detail = 1;
}

message AnomalyDatabaseSchemaDriftPayload {
  // The schema version corresponds to the expected schema
  string version = 1;
  // The expected latest schema stored in the migration history table
  string expect = 2;
  // The actual schema dumped from the database
  string actual = 3;
}
